# javamcp

./: .gitignore  .mcp.json  .pylintrc  CHANGELOG.md  CLAUDE.md  DEVSETUP.md  DISCLAIMER.md  LICENSE  README.md  config.example.json  config.example.yaml  config.json  config.yml  pyproject.toml
.claude/commands/: release-plan.md
design/: COMPONENTS.md  REQUIREMENTS.md  TECH_STACK.md
docs/: CODEBASE_WORKFLOW.md  javamcp.drawio
grammars/: JavaParser.g4  README.md
misc/: CHECKPOINT_PHASE_4.md  PHASE_5_COMPLETE.md  PHASE_5_STATUS.md  PHASE_6_COMPLETE.md  PROJECT_COMPLETE.md
misc/memory/: PROJ_REQUIREMENTS.md  RULES_UNDERSTANDING.md  USER_CLAUDE.md
misc/tasks/: add_license_headers.md  claude_code_mcp_setup_plan.md  fastmcp_refactor_plan.md  javamcp_implementation_plan.md  logging_initialization_fix_implementation.md  pylint_fixes.md  release_plan_v0.1.0.md  release_plan_v0.10.0.md  release_plan_v0.11.0.md  release_plan_v0.12.0.md  release_plan_v0.13.0.md  release_plan_v0.14.0.md  release_plan_v0.15.0.md  release_plan_v0.2.0.md  release_plan_v0.2.1.md  release_plan_v0.2.2.md  release_plan_v0.2.3.md  release_plan_v0.3.0.md  release_plan_v0.4.0.md  release_plan_v0.5.0.md  release_plan_v0.6.0.md  release_plan_v0.7.0.md  release_plan_v0.8.0.md  release_plan_v0.9.0.md  rotating_log_files_plan.md  shallow_clone_implementation_plan.md
src/javamcp/: __init__.py  __main__.py  config_template.yml  server.py  server_factory.py
src/javamcp/antlr4/: JavaLexer.py  JavaParser.interp  JavaParser.py  JavaParserBase.py  JavaParserListener.py
src/javamcp/config/: __init__.py  loader.py  schema.py
src/javamcp/context/: __init__.py  context_builder.py  formatter.py
src/javamcp/indexer/: __init__.py  exceptions.py  indexer.py  models.py  path_indexer.py  query_engine.py
src/javamcp/logging/: __init__.py  logger.py
src/javamcp/models/: __init__.py  java_entities.py  mcp_protocol.py  repository.py
src/javamcp/parser/: __init__.py  ast_visitor.py  exceptions.py  java_parser.py  javadoc_parser.py
src/javamcp/repositories/: __init__.py  exceptions.py  manager.py  models.py
src/javamcp/repository/: __init__.py  exceptions.py  git_operations.py  manager.py
src/javamcp/resources/: __init__.py  project_context_builder.py
src/javamcp/tools/: __init__.py  analyze_class.py  extract_apis.py  generate_guide.py  search_methods.py
src/javamcp/utils/: helpers.py
tasks/: plan_GitRepositoryManager.md  plan_test_compliance_GitRepositoryManager.md
tests/: test_main.py
tests/config/: test_loader.py  test_schema.py
tests/context/: test_context_builder.py  test_formatter.py
tests/indexer/: __init__.py  conftest.py  test_indexer.py  test_path_indexer.py  test_query_engine.py
tests/integration/: __init__.py  conftest.py  test_git_to_indexer_integration.py  test_persistent_storage.py
tests/logging/: test_logger.py
tests/models/: test_java_entities.py  test_mcp_protocol.py  test_repository.py
tests/parser/: __init__.py  test_java_parser.py  test_javadoc_parser.py
tests/repositories/: __init__.py  conftest.py  test_manager.py
tests/repository/: test_git_operations.py  test_manager.py
tests/resources/: __init__.py  test_project_context_builder.py
tests/server/: test_server.py
tests/tools/: test_tools.py
tests_cov/: GitRepositoryManager.md
