[project]
name = "javamcp"
version = "0.8.0"
description = "An AI MCP server to expose Java APIs/documentations to AI coding assistants."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.13,<3.14"
keywords = [ "AI", "LLM", "MCP", "agent", "coding", "assistant"  ]
authors = [
    { name = "Rubens Gomes", email = "rubens.s.gomes@gmail.com" }
]
maintainers = [
    { name = "Rubens Gomes", email = "rubens.s.gomes@gmail.com" }
]
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 3 - Alpha",
    # Indicate who your project is intended for
    "Intended Audience :: Software Engineer",
    "Topic :: Software Development :: MCP Server",
    # Specify the Python versions you support here.
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastmcp (>=2.12.5,<3.0.0)",
    "gitpython (>=3.1.45,<4.0.0)",
    "pydantic (>=2.12.3,<3.0.0)",
    "antlr4-python3-runtime (>=4.13.2,<5.0.0)",
]
packages = [{include = "javamcp", from = "src"}]

[project.urls]
Homepage = "https://github.com/rubensgomes/javamcp/"
Documentation = "https://github.com/rubensgomes/javamcp/README.md"
Repository = "https://github.com/rubensgomes/javamcp/"

[tool.poetry.group.dev.dependencies]
coverage = "^7.10.4"
pytest = "^8.4.1"
pytest-mock = "^3.14.1"
python-semantic-release = "^10.3.1"
black = "^25.9.0"
flake8 = "^7.3.0"
mypy = "^1.18.2"
isort = "^6.0.1"
pytest-cov = "^7.0.0"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = "poetry build"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

