[project]
name = "javamcp"
version = "0.11.0"
description = "An AI MCP server to expose Java APIs to AI coding assistants."
readme = "README.md"
license = "NONE"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.13,<4.0.0"
keywords = [ "AI", "LLM", "MCP", "agent", "coding", "assistant"  ]
authors = [
    { name = "Rubens Gomes", email = "rubens.s.gomes@gmail.com" }
]
maintainers = [
    { name = "Rubens Gomes", email = "rubens.s.gomes@gmail.com" }
]
classifiers = [
    # How mature is this project? Common values are
    # (refer to https://pypi.org/classifiers/)
    #   2 - Under Development (Pre-Alpha)
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 2 - Pre-Alpha",
    # Indicate who your project is intended for
    "Intended Audience :: Software Engineer",
    "Topic :: Software Development :: MCP Server",
    # Specify the Python versions you support here.
    "Programming Language :: Python :: 3.13",
    "License :: Freely Distributable",
]
dependencies = [
    "fastmcp>=2.14.1",
    "gitpython>=3.1.45",
    "pydantic>=2.12.5",
    "antlr4-python3-runtime>=4.13.2",
]
packages = [{include = "javamcp", from = "src"}]

[project.urls]
Homepage = "https://github.com/rubensgomes/javamcp/"
Documentation = "https://github.com/rubensgomes/javamcp/README.md"
Repository = "https://github.com/rubensgomes/javamcp/"

[tool.poetry.group.dev.dependencies]
coverage = ">=7.13.0"
pytest = ">=8.4.2"
pytest-mock = ">=3.15.1"
python-semantic-release = ">=10.5.3"
black = ">=26.1a1"
flake8 = ">=7.3.0"
mypy = ">=1.19.1"
isort = ">=6.1.0"
pytest-cov = ">=7.0.0"

[tool.poetry]
include = ["config.yml", "CHANGELOG.md"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = "poetry build"


[tool.mypy]
files = ["src/javamcp"]
exclude = '''(^.*/antlr4/)'''


[build-system]
requires = ["poetry-core>=2.2.1,<3.0.0"]
build-backend = "poetry.core.masonry.api"


